Solved whitespace problem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -186,3 +186,7 @@ li::before {
     width: 40px;
 }
 }
+
+.show {
+    white-space: pre;
+}
